--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
   }
   .reg-page {
       width: 360px;
-      height: 790px;
+      height: 800px;
       margin: auto;
       margin-top: 50px;
       margin-bottom: 50px;
@@ -123,8 +123,7 @@ html, body {
       margin-bottom: 50px;
       background-color: #fff;
       border-radius: 2px;
-  
-      
+      justify-content: center; 
   }
   #heading {
       font-size: 40px;
@@ -152,19 +151,17 @@ html, body {
     
   }
   .pop-up {
-      height: 450px;
+      height: 400px;
       width: 100%;
       padding: 20px 0;
       border-radius: 6px;
       background: #fff;
-      margin-top: 40px;
       margin: auto;
       text-align: center;
       box-sizing: border-box;
   }
   .icon {
       text-align: center;
-      margin-top: 30px;
   }
   h1 {
       margin-top: 10px;
@@ -185,7 +182,6 @@ html, body {
       transition: transform .5s;
   }
   .buttn a {
-      margin-top: 10px;
       text-align: center;
   }
   .success a {
@@ -197,8 +193,7 @@ html, body {
       border-radius: 6px;
       align-items: center;
       justify-items: center;
-      padding-inline: 20px;
-      padding-block: 20px;
+      padding: 20px 20px;
       margin: 0 auto;
       margin-top: 20px;
       font-size: 18px;
@@ -210,3 +205,46 @@ html, body {
       font-size: 60px;
       margin-block: 20px;
   }
+
+  /*-----smaller screens-----*/
+  
+    @media screen and (max-width: 600px) {
+        .reg-page {
+            width: 100%;
+            height: 800px;
+            margin: 0 auto;
+            border-radius: 0;
+        }
+        .login-form {
+            width: 360px;;
+            height: 100%;
+            margin: 0 auto;
+            border-radius: 0;
+        }
+        .pop-up {
+            height: 100%;
+            width: 250px;
+            margin: 0;
+            border-radius: 0;
+        }
+        .success a {
+            background-color: #0263ff;
+            color: #fff;
+            text-decoration: none;
+            justify-content: center;
+            display: block;
+            border-radius: 6px;
+            justify-items: center;
+            padding: 14px 20px;
+            margin: 0 auto;
+            margin-top: 20px;
+            font-size: 13px;
+            font-weight: bold;
+            width: 50%;
+        }
+        .fa-regular  {
+            color: #0dd30d;
+            font-size: 40px;
+            margin-block: 10px;
+        }
+    }
